{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 1407,
  "lineage": "c9751c47-c9a7-81ac-32c6-cc87b022c8ef",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dc_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkInterfaces/winserver-japan-nic",
            "internal_domain_name_suffix": "rs3j31u2dpiujbuhvwhz0cadzc.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "dc_nic_configuration",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/publicIPAddresses/winserver-japan-public-ip",
                "subnet_id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/virtualNetworks/winserver-japan-vnet/subnets/winserver-japan-subnet"
              }
            ],
            "location": "southeastasia",
            "name": "winserver-japan-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "winserver-japan-rg"
          },
          "dependencies": [
            "azurerm_public_ip.dc_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.my_terraform_subnet",
            "azurerm_virtual_network.my_terraform_network",
            "random_shuffle.locations"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "unixclient_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_servers": [
              "10.0.1.4"
            ],
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkInterfaces/myNIC",
            "internal_domain_name_suffix": "rs3j31u2dpiujbuhvwhz0cadzc.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "my_nic_configuration",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/publicIPAddresses/unixclient_public_ip",
                "subnet_id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/virtualNetworks/winserver-japan-vnet/subnets/winserver-japan-subnet"
              }
            ],
            "location": "southeastasia",
            "name": "myNIC",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "winserver-japan-rg"
          },
          "dependencies": [
            "azurerm_network_interface.dc_nic",
            "azurerm_public_ip.dc_public_ip",
            "azurerm_public_ip.unixclient_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.my_terraform_subnet",
            "azurerm_virtual_network.my_terraform_network",
            "random_shuffle.locations"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "winclient_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_servers": [
              "10.0.1.4"
            ],
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkInterfaces/winclient-japan-nic",
            "internal_domain_name_suffix": "rs3j31u2dpiujbuhvwhz0cadzc.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "my_nic_configuration",
                "primary": true,
                "private_ip_address": "10.0.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/publicIPAddresses/winclient-japan-public-ip",
                "subnet_id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/virtualNetworks/winserver-japan-vnet/subnets/winserver-japan-subnet"
              }
            ],
            "location": "southeastasia",
            "name": "winclient-japan-nic",
            "private_ip_address": "10.0.1.6",
            "private_ip_addresses": [
              "10.0.1.6"
            ],
            "resource_group_name": "winserver-japan-rg"
          },
          "dependencies": [
            "azurerm_network_interface.dc_nic",
            "azurerm_public_ip.dc_public_ip",
            "azurerm_public_ip.winclient_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.my_terraform_subnet",
            "azurerm_virtual_network.my_terraform_network",
            "random_shuffle.locations"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "dc_bind",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkInterfaces/winserver-japan-nic|/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkSecurityGroups/winserver-japan-nsg",
            "network_interface_id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkInterfaces/winserver-japan-nic",
            "network_security_group_id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkSecurityGroups/winserver-japan-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.dc_nic",
            "azurerm_network_security_group.dc_nsg",
            "azurerm_public_ip.dc_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.my_terraform_subnet",
            "azurerm_virtual_network.my_terraform_network",
            "random_shuffle.locations"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkInterfaces/myNIC|/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "network_interface_id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkInterfaces/myNIC",
            "network_security_group_id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup"
          },
          "dependencies": [
            "azurerm_network_interface.dc_nic",
            "azurerm_network_interface.unixclient_nic",
            "azurerm_network_security_group.unixclient_nsg",
            "azurerm_public_ip.dc_public_ip",
            "azurerm_public_ip.unixclient_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.my_terraform_subnet",
            "azurerm_virtual_network.my_terraform_network",
            "random_shuffle.locations"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "winclient_bind",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkInterfaces/winclient-japan-nic|/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkSecurityGroups/winclient-japan-nsg",
            "network_interface_id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkInterfaces/winclient-japan-nic",
            "network_security_group_id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkSecurityGroups/winclient-japan-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.dc_nic",
            "azurerm_network_interface.winclient_nic",
            "azurerm_network_security_group.winclient_nsg",
            "azurerm_public_ip.dc_public_ip",
            "azurerm_public_ip.winclient_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.my_terraform_subnet",
            "azurerm_virtual_network.my_terraform_network",
            "random_shuffle.locations"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dc_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkSecurityGroups/winserver-japan-nsg",
            "location": "southeastasia",
            "name": "winserver-japan-nsg",
            "resource_group_name": "winserver-japan-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "web",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_shuffle.locations"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "unixclient_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "location": "southeastasia",
            "name": "myNetworkSecurityGroup",
            "resource_group_name": "winserver-japan-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_shuffle.locations"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "winclient_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/networkSecurityGroups/winclient-japan-nsg",
            "location": "southeastasia",
            "name": "winclient-japan-nsg",
            "resource_group_name": "winserver-japan-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "web",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_shuffle.locations"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "dc_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/publicIPAddresses/winserver-japan-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "winserver-japan-public-ip",
            "resource_group_name": "winserver-japan-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_shuffle.locations"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "unixclient_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/publicIPAddresses/unixclient_public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "unixclient_public_ip",
            "resource_group_name": "winserver-japan-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_shuffle.locations"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "winclient_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/publicIPAddresses/winclient-japan-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "winclient-japan-public-ip",
            "resource_group_name": "winserver-japan-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_shuffle.locations"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "my_terraform_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/virtualNetworks/winserver-japan-vnet/subnets/winserver-japan-subnet",
            "name": "winserver-japan-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "winserver-japan-rg",
            "virtual_network_name": "winserver-japan-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.my_terraform_network",
            "random_shuffle.locations"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "my_terraform_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ee9eba8c-1b9c-44d1-8687-ad8f9d0803ca",
            "id": "/subscriptions/d38bd7c1-7749-48cb-ac75-daa782797ca7/resourceGroups/winserver-japan-rg/providers/Microsoft.Network/virtualNetworks/winserver-japan-vnet",
            "location": "southeastasia",
            "name": "winserver-japan-vnet",
            "resource_group_name": "winserver-japan-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_shuffle.locations"
          ]
        }
      ]
    }
  ]
}